labs/examples/design-patterns-examples/src/com/examples/design/solid/d/good/IWorker.java
package com.examples.design.solid.d.good;

// Dependency Inversion Principle - Good example
interface IWorker {
    public void work();
}
