labs/examples/design-patterns-examples/src/com/examples/design/solid/d/bad/Worker.java
package com.examples.design.solid.d.bad;

// Dependency Inversion Principle - Bad example

public class Worker {
    public void work() {
        // ....working
    }
}
